--- a/index.html
+++ b/index.html
@@ -64,25 +64,25 @@
 
       <div class="flex flex-col sm:flex-row  items-center justify-center gap-4">
         <!-- 15% OFF part -->
-        <div class="flex gap-4 bg-[#FFBF0F] p-10 md:p-4 rounded-lg">
+        <div class="flex gap-4 bg-[#FFBF0F] p-8 md:p-4 rounded-lg">
           <div class="flex-grow p-10 md:p-0">
             <h1 class="text-2xl">15% OFF</h1>
             <h2 class="text-xl">on your next purchase</h2>
             <p>use by January 2024</p>
           </div>
-          <div class="border-l-2 border-dashed pl-3 p-10 md:p-0">
+          <div class="border-l-2 border-dashed  p-10 md:p-3">
             <h1 class="text-2xl pt-4">NEW15</h1>
             <p class="text-xl">Coupon Code</p>
           </div>
         </div>
         <!-- 20% OFF part -->
-        <div class="flex gap-4 bg-[#F78C9C] p-10 md:p-4 rounded-lg">
+        <div class="flex gap-4 bg-[#F78C9C] p-8 md:p-4 rounded-lg">
           <div class="p-10 md:p-0">
             <h1 class="text-2xl">20% OFF</h1>
             <h2 class="text-xl">on your next purchase</h2>
             <p>use by January 2024</p>
           </div>
-          <div class="border-l-2 border-dashed pl-3 p-10 md:p-0">
+          <div class="border-l-2 border-dashed  p-10 md:p-3">
             <h1 class="text-2xl pt-4">Couple 20</h1>
             <p class="text-xl">Coupon Code</p>
           </div>
@@ -141,7 +141,7 @@
         </div>
       </section>
 
-      <!--(section-2)calculation part -->
+      <!--(section-2) calculation part -->
       <section class="flex justify-between my-4 py-2">
         <!-- left side calculation -->
         <div class="w-1/2 pr-4">
@@ -184,7 +184,7 @@
                   <th class="text-right pr-4">Fare</th>
                 </tr>
               </thead>
-              <tbody>
+              <tbody >
                 <!-- row -->
                                 
               </tbody>
@@ -196,8 +196,8 @@
             <div id="totalFare" class="pr-4">0</div>
           </div>
           <div class="flex justify-between mb-2 ">
-            <input class="text-center" type="text" placeholder="have a cupon?">
-            <button class="btn btn-success px-4">Apply</button>
+            <input  class="text-center" type="text" placeholder="have a cupon?">
+            <button  class="btn btn-success px-4">Apply</button>
           </div>
           <hr>
           <div class="flex justify-between my-2">
